--- a/templates/doubleboard/question_detail.html
+++ b/templates/doubleboard/question_detail.html
@@ -44,9 +44,9 @@
                     {% endif %}
 
                     <!-- 질문 댓글 Start -->
-                    {% if question.comment_set.count > 0 %}
+                    {% if question.commentdouble_set.count > 0 %}
                     <div class="mt-3">
-                    {% for comment in question.comment_set.all %} <!--질문에 등록된 댓글을 모두 보여줌.-->
+                    {% for comment in question.commentdouble_set.all %} <!--질문에 등록된 댓글을 모두 보여줌.-->
                         <a name="comment_{{ comment.id }}"></a>
                         <div class="comment py-2 text-muted"> <!--댓글 영역은 작게 나타내기 위해 comment 클래스 사용 설정-->
                             <span style="white-space: pre-line;">{{ comment.content_double }}</span>
@@ -76,8 +76,8 @@
     </div>
 
     <!--답변구역-->
-    <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5>
-    {% for answer in question.answer_set.all %}
+    <h5 class="border-bottom my-3 py-2">{{question.answerdouble_set.count}}개의 답변이 있습니다.</h5>
+    {% for answer in question.answerdouble_set.all %}
     <a name="answer_{{ answer.id }}"></a> <!--앵커태그-->
     <div class="row my-3">
         <div class="col-1">  <!-- 추천영역 -->
