--- a/templates/information/question_list.html
+++ b/templates/information/question_list.html
@@ -1,5 +1,5 @@
 {% extends 'information.html' %} <!--base.html 템플릿을 상속-->
-{% load pybo_filter %} <!--템플릿 필터함수를 저장한 파일(information_filter.py) 로드(템플릿 상단에 extends 문이 있을 경우 load문은 extends 문 다음에 위치)-->
+{% load information_filter %} <!--템플릿 필터함수를 저장한 파일(information_filter.py) 로드(템플릿 상단에 extends 문이 있을 경우 load문은 extends 문 다음에 위치)-->
 {% block content %} <!--question_list.html에서만 쓰이는 내용을 작성-->
 
 <div class="container my-3">
