edit comment, answer, order system

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <div class="col-12">
           <h2>닷컴에 오신 것을 환영합니다!</h2>
           <h5>닷컴 소개</h5>
-          <div>닷컴은 컴퓨터공학부 다전공을 이수중인 학생들끼리 만든 다전공/부전공 전용 홈페이지 입니다.<br>~~~ 수정하기
+          <div>닷컴은 컴퓨터공학부 다전공을 이수중인 학생들끼리 만든 다전공/부전공 전용 홈페이지 입니다.<br>
           </div>
           <ul style="margin-top: 1rem;">
             <li>
