--- a/templates/minorboard/question_list.html
+++ b/templates/minorboard/question_list.html
@@ -1,5 +1,5 @@
 {% extends 'minorboard.html' %} <!--base.html 템플릿을 상속-->
-{% load minorboard_filter %} <!--템플릿 필터함수를 저장한 파일(minorboard_filter.py) 로드(템플릿 상단에 extends 문이 있을 경우 load문은 extends 문 다음에 위치)-->
+{% load pybo_filter %} <!--템플릿 필터함수를 저장한 파일(minorboard_filter.py) 로드(템플릿 상단에 extends 문이 있을 경우 load문은 extends 문 다음에 위치)-->
 {% block content %} <!--question_list.html에서만 쓰이는 내용을 작성-->
 
 <div class="container my-3">
@@ -103,7 +103,7 @@
     <a href="{% url 'minorboard:question_create' %}" class="btn btn-primary">글 등록하기</a>
 </div>
 
-<form id="searchForm" method="get" action="{% url 'index' %}">
+<form id="searchForm" method="get" action="{% url 'minorboard:index' %}">
     <input type="hidden" id="kw" name="kw" value="{{ kw|default_if_none:'' }}">
     <input type="hidden" id="page" name="page" value="{{ page }}">
     <input type="hidden" id="so" name="so" value="{{ so }}">
