--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,8 +6,8 @@
         class="navbar-toggler ml-auto"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
+        data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
